# acid-ladder-vst

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-all.sh
.github/workflows/: build.yml
cmake/toolchains/: mingw64.cmake
src/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
